fix: issues with dropdown positioning on small width screens

--- a/src/styles/message-dropdown.module.css
+++ b/src/styles/message-dropdown.module.css
@@ -1,15 +1,14 @@
 .dropdownContainer {
-  position: absolute;
+  position: fixed;
   display: flex;
   flex-direction: column;
   padding: 0.1rem;
   background-color: var(--color-background-lighter);
   border-radius: 0.25rem;
-  transform: translate(-75%, -100%);
   width: max-content;
   border: 1px solid var(--color-border);
   box-shadow: var(--shadow);
-  z-index: 15;
+  z-index: 10;
 }
 
 .dropdownBtn {
